--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_slidable: ^3.1.2
   intl: ^0.20.1
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
