--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_slidable: ^3.1.2
   intl: ^0.20.1
   path: ^1.9.0
+  provider: ^6.1.2
   sqflite: ^2.4.1
 
 dev_dependencies:
