--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter_slidable: ^3.1.2
   intl: ^0.20.1
   path: ^1.9.0
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
+  printing: ^5.14.2
   provider: ^6.1.2
   sqflite: ^2.4.1
 
